# actix-crud

./: .gitignore  Cargo.toml  README.md
sql-scripts/: user.sql
src/commons/: Cargo.toml
src/commons/src/: lib.rs
src/models/: Cargo.toml
src/models/src/: base.rs  lib.rs
src/models/src/entities/: attributes.rs  mod.rs  user.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/api/: mod.rs  router_config.rs
src/server/src/api/api_services/: user_api.rs
src/server/src/api/endpoints/health/: mod.rs
src/server/src/api/endpoints/user/: mod.rs
src/server/src/configs/: mod.rs
src/services/: Cargo.toml
src/services/src/: lib.rs
src/services/src/factory/: mod.rs
src/services/src/services/: health_check.rs  user.rs
src/services/src/session/: context.rs  mod.rs  session.rs
src/store/: Cargo.toml
src/store/src/providers/: mod.rs
src/store/src/providers/core/: builder.rs
src/store/src/providers/interfaces/: health_check.rs  mod.rs  user.rs
src/store/src/providers/repositories/: health_check_repo.rs  mod.rs  user_repo.rs
src/store/src/providers/tables/: health_table.rs  mod.rs  table.rs  user_table.rs
