[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = {path = "../store", version = "0.1.0"}
services = { path = "../services", version = "0.1.0"}
models = { path = "../models", version = "0.1.0"}
commons = { path = "../commons", version = "0.1.0"}

actix-web = "4.7.0"
serde = {version = "1.0.203", features = ["derive"]}
deadpool-postgres = "0.14.0"
postgres = "0.19.7"
serde_json = "1.0.117"
dotenv = "0.15.0"
prometheus = "0.13.4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.3"
shaku = "0.6.1"
log = "0.4.21"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-actix-web = "0.7.11"
[dependencies.uuid]
version = "1.8.0"
features = ["v7", "fast-rng", "macro-diagnostics"]
