[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../store", version = "0.1.0"}
commons = { path = "../commons", version = "0.1.0"}
models = { path = "../models", version = "0.1.0"}

shaku = "0.6.1"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"]}
actix-web = "4.7.0"
log = "0.4.21"
[dependencies.uuid]
version = "1.8.0"
features = ["v7", "fast-rng", "macro-diagnostics"]