[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models", version = "0.1.0"}

deadpool-postgres = "0.14.0"
tokio = "1.38.0"
lazy_static = "1.4.0"
shaku = "0.6.1"
tokio-postgres = {version = "0.7.10", features = ["with-chrono-0_4"]}
postgres-types = {version = "0.2.6", features = ["derive", "with-serde_json-1"]}
anyhow = "1.0.86"
log = "0.4.21"
async-trait = "0.1.80"
serde_json = "1.0.117"